// Users
Table users {
  // Internal
  id int [pk, increment]
  role roles [default: "regular", not null]
  verified boolean [default: false, not null]
  verification_token varchar [unique, not null]
  created timestamp [default: `now()`, not null]
  last timestamp
  
  // Auth
  email varchar [unique, not null]
  password varchar [not null]
  
  // User data
  full_name varchar [not null]
  address varchar
  city varchar
  postal varchar
  phone varchar
}

// Roles
Enum roles {
  regular
  admin [note: 'Has root access']
}

// Users & Groups
Table users_groups {
  user_id int [pk, ref: > users.id]
  group_id int [pk, ref: > groups.id]
  is_admin boolean [default: false]
}

// Groups
Table groups {
  id int [pk, increment]
  name varchar [not null]
}